// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  className="sc-bxivhb imlasA"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt=""
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bdVaJa hyuQbI k-Title k-u-align-center k-Title--senary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-htpNat iPTkQR k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--orion k-Button--fit-min-width"
      href={null}
      onClick={null}
      style={
        Object {
          "--Button-border-radius": null,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  className="sc-bxivhb imlasA"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt="Image alt"
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bdVaJa hyuQbI k-Title k-u-align-center k-u-margin-bottom-singleHalf k-Title--senary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    <p
      className="sc-bwzfXH kbJdDO k-Paragraph k-u-align-center k-u-margin-top-singleHalf k-Paragraph--tertiary k-Paragraph--noMargin"
    >
      Custom text
    </p>
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-htpNat iPTkQR k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--orion k-Button--fit-min-width"
      href={null}
      onClick={null}
      style={
        Object {
          "--Button-border-radius": null,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;
